--- a/Ventura/Ventura.csproj
+++ b/Ventura/Ventura.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="TwoFish">
+      <HintPath>..\third party\TwoFish.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
