Set key, tidied up constructor

--- a/src/Ventura.Console/Ventura.Console.csproj
+++ b/src/Ventura.Console/Ventura.Console.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\Ventura\Ventura.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="TwoFish">
+      <HintPath>..\..\third party\TwoFish.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
