--- a/test/Ventura.Tests/Ventura.Tests.csproj
+++ b/test/Ventura.Tests/Ventura.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Ventura\Ventura.csproj" />
+    <ProjectReference Include="..\..\src\Ventura\Ventura.csproj" />
   </ItemGroup>
 
 </Project>
