--- a/src/Ventura/Ventura.csproj
+++ b/src/Ventura/Ventura.csproj
@@ -9,13 +9,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="BlowFish">
+      <HintPath>..\..\third party\BlowFish.dll</HintPath>
+    </Reference>
     <Reference Include="TwoFish">
       <HintPath>..\..\third party\TwoFish.dll</HintPath>
     </Reference>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Accumulator\Sources\" />
+    <Folder Include="Accumulator\EntropySources\" />
   </ItemGroup>
 
 </Project>
