--- a/src/Ventura.Console/Ventura.Console.csproj
+++ b/src/Ventura.Console/Ventura.Console.csproj
@@ -6,16 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ventura\Ventura.csproj" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="BlowFish">
-      <HintPath>..\..\third party\BlowFish.dll</HintPath>
-    </Reference>
-    <Reference Include="TwoFish">
-      <HintPath>..\..\third party\TwoFish.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Ventura\Ventura.csproj" />
   </ItemGroup>
 
 </Project>
