--- a/src/Ventura/Ventura.csproj
+++ b/src/Ventura/Ventura.csproj
@@ -5,20 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="4.19.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="BlowFish">
-      <HintPath>..\..\third party\BlowFish.dll</HintPath>
-    </Reference>
-    <Reference Include="TwoFish">
-      <HintPath>..\..\third party\TwoFish.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Accumulator\EntropySources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 
 </Project>
