--- a/test/Ventura.Tests/Ventura.Tests.csproj
+++ b/test/Ventura.Tests/Ventura.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Moq" Version="4.7.145" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 
   <ItemGroup>
