More work on events, pools and extractors

--- a/test/Ventura.Tests/Ventura.Tests.csproj
+++ b/test/Ventura.Tests/Ventura.Tests.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\..\src\Ventura\Ventura.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Accumulator\" />
+  </ItemGroup>
+
 </Project>
