--- a/test/Ventura.Tests.Visualisation/Ventura.Tests.Visualisation.csproj
+++ b/test/Ventura.Tests.Visualisation/Ventura.Tests.Visualisation.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
