fixed travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ mono: none
 dist: xenial
 dotnet: 2.2
 script:
- - dotnet restore .\src\Ventura\Ventura.csproj
- - dotnet test test/ECommerce.Api.PaymentGateway.Tests
+ - dotnet restore src/Ventura/Ventura.csproj
+ - dotnet test test/Ventura.Tests
