--- a/src/Ventura.Cli/Ventura.Cli.csproj
+++ b/src/Ventura.Cli/Ventura.Cli.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <StartupObject></StartupObject>
+    <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <Description>Command-line interface for Ventura- A .NET Standard library implementing the Fortuna PRNG as devised by Bruce Schneier and Niels Ferguson in 2003. Also implemented are reseeding improvements suggested by Dodis et al in "How to Eat Your Entropy and Have it Too".</Description>
+    <Authors>Nick Patsaris</Authors>
+    <Copyright>Copyright Nick Patsaris</Copyright>
+    <PackageProjectUrl>https://github.com/nickpts/Ventura</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/nickpts/Ventura.git</RepositoryUrl>
+    <Version>1.0.0-alpha</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +22,13 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\license.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
