--- a/src/Ventura.Cli/Ventura.Cli.csproj
+++ b/src/Ventura.Cli/Ventura.Cli.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
-    <PackageReference Include="Ventura" Version="1.0.3-alpha" />
+    <PackageReference Include="Ventura" Version="1.0.6-beta" />
   </ItemGroup>
 
   <ItemGroup>
