--- a/src/Ventura/Ventura.csproj
+++ b/src/Ventura/Ventura.csproj
@@ -10,9 +10,10 @@
     <PackageProjectUrl>https://github.com/nickpts/Ventura</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nickpts/Ventura.git</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.8</Version>
-    <AssemblyVersion>1.0.8.0</AssemblyVersion>
-    <FileVersion>1.0.8.0</FileVersion>
+    <Version>1.0.9</Version>
+    <AssemblyVersion>1.0.9.0</AssemblyVersion>
+    <FileVersion>1.0.9.0</FileVersion>
+    <PackageIconUrl>https://camo.githubusercontent.com/3948ce123d5b5cb439b4887c73428d8d683943c6/68747470733a2f2f6c6976652e737461746963666c69636b722e636f6d2f36353533352f34383236303930313134365f393561333366616666305f715f642e6a7067</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
