--- a/src/Ventura/Ventura.csproj
+++ b/src/Ventura/Ventura.csproj
@@ -10,14 +10,15 @@
     <PackageProjectUrl>https://github.com/nickpts/Ventura</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nickpts/Ventura.git</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.1.2</Version>
-    <AssemblyVersion>1.1.2.0</AssemblyVersion>
-    <FileVersion>1.1.2.0</FileVersion>
+    <Version>1.1.3</Version>
+    <AssemblyVersion>1.1.3.0</AssemblyVersion>
+    <FileVersion>1.1.3.0</FileVersion>
     <PackageIconUrl>https://camo.githubusercontent.com/3948ce123d5b5cb439b4887c73428d8d683943c6/68747470733a2f2f6c6976652e737461746963666c69636b722e636f6d2f36353533352f34383236303930313134365f393561333366616666305f715f642e6a7067</PackageIconUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Users\Nick\Dev\src\projects\Ventura\src\Ventura\Ventura.xml</DocumentationFile>
+    <NoWarn>1701;1702; 1591; 1570; 1573;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
